1st pass at records